apps/nodejstest1/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejstest1
  namespace: dev
  labels:
    app: nodejstest1
    backstage.io/kubernetes-id: nodejstest1
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejstest1
  template:
    metadata:
      labels:
        app: nodejstest1
        backstage.io/kubernetes-id: nodejstest1
        environment: dev
        tags.datadoghq.com/env: dev
        tags.datadoghq.com/service: nodejstest1
        tags.datadoghq.com/version: "1.0"
    spec:
      containers:
        - name: nodejstest1
          image: jaykumark7/nodejstest1:1.0.6
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "384Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
