apps/nodejstest1/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejstest1
  namespace: dev
  labels:
    backstage.io/kubernetes-id: nodejstest1
spec:
  selector:
    app: nodejstest1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
